Logs/log-m2.txt
ERROR > An Error Occured
Traceback (most recent call last):
  File "bot.py", line 38, in <module>
    exec(rk.read())
  File "<string>", line 2
    async def help(ctx)
                      ^
SyntaxError: invalid syntax
ERROR > Attempting a reconnect in 2.00s
Traceback (most recent call last):
  File "/home/pi/.local/lib/python3.7/site-packages/aiohttp/connector.py", line 967, in _create_direct_connection
    traces=traces), loop=self._loop)
  File "/home/pi/.local/lib/python3.7/site-packages/aiohttp/connector.py", line 830, in _resolve_host
    self._resolver.resolve(host, port, family=self._family)
  File "/home/pi/.local/lib/python3.7/site-packages/aiohttp/resolver.py", line 30, in resolve
    host, port, type=socket.SOCK_STREAM, family=family)
  File "/usr/lib/python3.7/asyncio/base_events.py", line 789, in getaddrinfo
    None, getaddr_func, host, port, family, type, proto, flags)
  File "/usr/lib/python3.7/concurrent/futures/thread.py", line 57, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/usr/lib/python3.7/socket.py", line 748, in getaddrinfo
    for res in _socket.getaddrinfo(host, port, family, type, proto, flags):
socket.gaierror: [Errno -3] Temporary failure in name resolution

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/pi/.local/lib/python3.7/site-packages/discord/client.py", line 499, in connect
    await self._connect()
  File "/home/pi/.local/lib/python3.7/site-packages/discord/client.py", line 469, in _connect
    self.ws = await asyncio.wait_for(coro, timeout=180.0)
  File "/usr/lib/python3.7/asyncio/tasks.py", line 416, in wait_for
    return fut.result()
  File "/home/pi/.local/lib/python3.7/site-packages/discord/gateway.py", line 224, in from_client
    gateway = await client.http.get_gateway()
  File "/home/pi/.local/lib/python3.7/site-packages/discord/http.py", line 827, in get_gateway
    data = await self.request(Route('GET', '/gateway'))
  File "/home/pi/.local/lib/python3.7/site-packages/discord/http.py", line 165, in request
    async with self.__session.request(method, url, **kwargs) as r:
  File "/home/pi/.local/lib/python3.7/site-packages/aiohttp/client.py", line 1012, in __aenter__
    self._resp = await self._coro
  File "/home/pi/.local/lib/python3.7/site-packages/aiohttp/client.py", line 483, in _request
    timeout=real_timeout
  File "/home/pi/.local/lib/python3.7/site-packages/aiohttp/connector.py", line 523, in connect
    proto = await self._create_connection(req, traces, timeout)
  File "/home/pi/.local/lib/python3.7/site-packages/aiohttp/connector.py", line 859, in _create_connection
    req, traces, timeout)
  File "/home/pi/.local/lib/python3.7/site-packages/aiohttp/connector.py", line 971, in _create_direct_connection
    raise ClientConnectorError(req.connection_key, exc) from exc
aiohttp.client_exceptions.ClientConnectorError: Cannot connect to host discordapp.com:443 ssl:default [Temporary failure in name resolution]
WARNING > Shard ID None has stopped responding to the gateway. Closing and restarting.
WARNING > Shard ID None has stopped responding to the gateway. Closing and restarting.
ERROR > Calling the after function failed.
Traceback (most recent call last):
  File "/home/pi/.local/lib/python3.7/site-packages/discord/player.py", line 611, in _call_after
    self.after(error)
  File "/home/pi/Bots/NightDragon/commands/music.py", line 239, in play_next_song
    raise VoiceError(str(error))
commands.music.VoiceError: [Errno 9] Bad file descriptor
WARNING > Shard ID None has stopped responding to the gateway. Closing and restarting.
ERROR > Calling the after function failed.
Traceback (most recent call last):
  File "/home/pi/.local/lib/python3.7/site-packages/discord/player.py", line 611, in _call_after
    self.after(error)
  File "/home/pi/Bots/NightDragon/commands/music.py", line 239, in play_next_song
    raise VoiceError(str(error))
commands.music.VoiceError: 'NoneType' object has no attribute 'read'
